feat(seasons): initialize current season on startup